--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-19 22:33+0300\n"
-"PO-Revision-Date: 2013-06-15 21:43+0200\n"
+"PO-Revision-Date: 2013-06-28 21:15+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -4319,7 +4319,7 @@ msgstr "Você irá usar %d dormitórios completos."
 #: ../code/application/views/hb/booking_avail_view.php:643
 #, php-format
 msgid "%d %s ( %s )"
-msgstr ""
+msgstr "%d %s ( %s )"
 
 #: ../code/application/views/hw/booking_avail_view.php:358
 #: ../code/application/views/hb/booking_avail_view.php:344
@@ -5009,7 +5009,7 @@ msgstr ""
 
 #: ../code/application/views/hb/property_list.php:112
 msgid "80% +"
-msgstr ""
+msgstr "80% +"
 
 #: ../code/application/views/hb/hostel_view.php:867
 msgid "Purchasable Extras"
@@ -9153,12 +9153,12 @@ msgstr "Clique aqui para ver os preços dessa propriedade"
 #: ../code/application/views/helpfile/pofields.php:889
 #, php-format
 msgid "The benefits"
-msgstr ""
+msgstr "Os benefícios"
 
 #: ../code/application/views/helpfile/pofields.php:890
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to see info and prices"
-msgstr "Clique aqui para selecionar essa propriedade"
+msgstr "Clique aqui para ver informações e preço"
 
 #: ../code/application/views/helpfile/pofields.php:891
 #, php-format
