--- a/languages/ci/locale/zh_CN/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/zh_CN/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-19 22:33+0300\n"
-"PO-Revision-Date: 2013-06-16 22:39+0200\n"
+"PO-Revision-Date: 2013-06-28 21:58+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2148,9 +2147,9 @@ msgstr "很棒的位置"
 #: ../code/application/views/helpfile/pofields.php~:860
 #: ../code/application/views/helpfile/pofields.php:860
 #: ../code/application/views/helpfile/pofields.php:888
-#, fuzzy, php-format
+#, php-format
 msgid "Overall evaluation"
-msgstr "我的评价"
+msgstr "整体评估"
 
 #: ../code/application/views/mustache/property_list.php:245
 #: ../code/application/views/mustache/property_list.php:259
@@ -4044,7 +4043,6 @@ msgid "Date"
 msgstr "日期"
 
 #: ../code/application/views/hw/booking_end_view.php:165
-#, fuzzy
 msgid "Amount already paid"
 msgstr "已经支付的金额："
 
@@ -4198,7 +4196,7 @@ msgstr "你将使用%d整个宿舍。"
 #: ../code/application/views/hb/booking_avail_view.php:643
 #, php-format
 msgid "%d %s ( %s )"
-msgstr ""
+msgstr "%d %s ( %s )"
 
 #: ../code/application/views/hw/booking_avail_view.php:358
 #: ../code/application/views/hb/booking_avail_view.php:344
@@ -4852,7 +4850,7 @@ msgstr "在%s预订房间，您只需提前支付10%%的定金，余额将在抵
 
 #: ../code/application/views/hb/property_list.php:112
 msgid "80% +"
-msgstr ""
+msgstr "80% +"
 
 #: ../code/application/views/hb/hostel_view.php:867
 msgid "Purchasable Extras"
@@ -8780,64 +8778,64 @@ msgstr ""
 msgid ""
 "You can compare pricing, services and location on the map for up to 5 "
 "properties"
-msgstr ""
+msgstr "你可以选择5个住处比较价格，服务和地理位置"
 
 #: ../code/application/views/helpfile/pofields.php:880
-#, fuzzy, php-format
+#, php-format
 msgid "Please click here to compare"
-msgstr "请点击这里预览您的确认邮件"
+msgstr "请点击这里进行对比"
 
 #: ../code/application/views/helpfile/pofields.php:881
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to select this property"
-msgstr "删除本旅舍信息"
+msgstr "点击这里选择这个住处"
 
 #: ../code/application/views/helpfile/pofields.php:882
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "Lowest price for a bed in a dorm at this property for the selected dates"
-msgstr "这个住处一个宿舍每夜每人的最低价：%s"
+msgstr "选择日期内这个住处宿舍里一个床位的最低价"
 
 #: ../code/application/views/helpfile/pofields.php:883
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "Lowest price per person in a private room at this property for the selected "
 "dates"
-msgstr "这个住处一个私人房间每夜每人的最低价:%s"
+msgstr "选择日期内这个住处一个私人房间每人的最低价"
 
 #: ../code/application/views/helpfile/pofields.php:884
 #, php-format
 msgid ""
 "Click here to see pricing for each type of room and the maximum number of "
 "available beds in each room"
-msgstr ""
+msgstr "点击这里看每种类型房间的价格以及每个房间里的床位最多有几张"
 
 #: ../code/application/views/helpfile/pofields.php:885
 #, php-format
 msgid "You can filter the results based on their specific districts"
-msgstr ""
+msgstr "你可以根据它们特定的区域过滤结果"
 
 #: ../code/application/views/helpfile/pofields.php:886
 #, php-format
 msgid ""
 "You can filter the results based how close there are to specific landmarks, "
 "train stations and airports"
-msgstr ""
+msgstr "你可以根据与特定地标，火车站和机场的距离来过滤结果"
 
 #: ../code/application/views/helpfile/pofields.php:887
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to view pricing for this property"
-msgstr "本旅舍目前没有空房提供。"
+msgstr "点击这里查看这个住处的价格"
 
 #: ../code/application/views/helpfile/pofields.php:889
 #, php-format
 msgid "The benefits"
-msgstr ""
+msgstr "好处"
 
 #: ../code/application/views/helpfile/pofields.php:890
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to see info and prices"
-msgstr "删除本旅舍信息"
+msgstr "点击这里查看信息和价格"
 
 #: ../code/application/views/helpfile/pofields.php:891
 #, php-format
