--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
@@ -2960,7 +2960,7 @@ msgstr "Filtrer par Quartiers"
 
 #: ../code/application/views/city_view.php:21
 msgid "Filter by Landmarks (within 2km)"
-msgstr "Filtrer par attraction (- 2kms)"
+msgstr "Filtrer par attractions, gares, aéroports..."
 
 #: ../code/application/views/city_view.php:71
 #: ../code/application/views/helpfile/pofields.php~:845
@@ -2978,7 +2978,7 @@ msgstr "Filtrer par quartiers"
 
 #: ../code/application/views/city_view.php:101
 msgid "Filter by Landmarks"
-msgstr "Filtrer par attractions"
+msgstr "Filtrer par attractions, gares, aéroports..."
 
 #: ../code/application/views/city_view.php:131
 #: ../code/application/views/city_view.php:339
@@ -7998,7 +7998,7 @@ msgstr "Chambre Familale privée de luxe pour %d personnes et salle de bains pri
 #: ../code/application/views/helpfile/pofields.php:784
 #, php-format
 msgid "Filter by landmarks (-2kms)"
-msgstr "Filtrer par attractions (-2kms)"
+msgstr "Filtrer par attractions, gares, aéroports..."
 
 #: ../code/application/views/helpfile/pofields.php~:787
 #: ../code/application/views/helpfile/pofields.php:787
