--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-30 19:39+0300\n"
-"PO-Revision-Date: 2012-07-04 10:40-0800\n"
-"Last-Translator: Guillaume <gbourdages@graphem.ca>\n"
+"PO-Revision-Date: 2013-06-30 21:07+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,6 +13,7 @@ msgstr ""
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: F:\\5 - Eclipse Workspace\\AubergeSVN\\auberges\\trunk"
 "\\system\\application\n"
 "X-Poedit-SearchPath-1: F:\\5 - Auberges SVN\\auberges\\trunk\\system"
@@ -9025,7 +9025,7 @@ msgstr "Ваш профиль"
 #: ../code/application/views/search_results.php:66
 #: ../code/application/views/search_suggest.php:17
 msgid "City"
-msgstr "город"
+msgstr "Город"
 
 #: ../code/application/views/restricted/user_group_quote.php:63
 msgid "Your personalized group booking quote - Here is your offer!"
