--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-30 19:39+0300\n"
-"PO-Revision-Date: 2013-06-16 18:03+0200\n"
+"PO-Revision-Date: 2013-06-30 21:07+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3687,7 +3686,7 @@ msgstr ""
 "хостелах и местах недорогого проживания в последнюю минуту и по самой низкой "
 "цене в таких городах, как Париже во Франции, Лондонe в Англии, Барселонe в  "
 "Испании, Нью-Йоркe в Соединенных Штатах Америки, Римe в Италии, Амстердамe в "
-"Нидерландах, Дублинe в Ирландии, Мадридe в Испании, и Прагe в Чехии... Очень "
+"Нидерландах, Дублинe в Ирландии, Мадридe в Испании, и Прагe в Чехии… Очень "
 "простое планирование поездки, мы также предоставляем информацию о "
 "бронировании в последнюю минуту, путеводители и обзоры по лучшим хостелам."
 
@@ -6043,7 +6042,7 @@ msgid ""
 msgstr ""
 "Ассоциации, коммерческие палаты, школы, университеты, дневные центры, "
 "спортивные лагеря, города с услугами для молодежи, туристкие офисы, союзы, "
-"общественные союзы, бизнес...."
+"общественные союзы, бизнес…."
 
 #: ../code/application/views/helpfile/pofields.php~:159
 #: ../code/application/views/helpfile/pofields.php:159
@@ -9252,7 +9251,7 @@ msgstr "Ваш профиль"
 #: ../code/application/views/search_results.php:66
 #: ../code/application/views/search_suggest.php:17
 msgid "City"
-msgstr "город"
+msgstr "Город"
 
 #: ../code/application/views/restricted/user_group_quote.php:63
 msgid "Your personalized group booking quote - Here is your offer!"
