Update ru files

--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-30 19:39+0300\n"
-"PO-Revision-Date: 2013-06-30 21:07+0200\n"
+"PO-Revision-Date: 2013-07-01 21:22+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -3897,13 +3897,13 @@ msgstr "Введите \"От\""
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
 msgstr ""
-"Отправьте ссылку на эту страницу своему знакомому или переслать себе, как "
+"Отправьте ссылку на эту страницу своему знакомому или перешлите себе, как "
 "напоминание."
 
 #: ../code/application/views/includes/template-share-email-popup.php:52
 msgid "Mail this PDF quote to someone you know, or send it to yourself."
 msgstr ""
-"Отправьте эту информацию в PDF файле своим друзьям и близким, или отправить "
+"Отправьте эту информацию в PDF файле своим друзьям и близким, или перешлите "
 "ее себе."
 
 #: ../code/application/views/includes/template-share-email-popup.php:55
@@ -4556,8 +4556,8 @@ msgid ""
 "When available, we will provide directions on how to get to the property "
 "including public transportation and airport information."
 msgstr ""
-"Когда это возможно, мы будем предоставлять информацию о том, как добраться "
-"до отеля, включая общественный транспорт и аэропорт."
+"Мы предоставим Вам информацию о том, как добраться до отеля, включая "
+"общественный транспорт и аэропорт."
 
 #: ../code/application/views/hw/booking_avail_view.php:1126
 #: ../code/application/views/hb/booking_avail_view.php:1020
@@ -4569,7 +4569,7 @@ msgid ""
 "stay."
 msgstr ""
 "Мы предоставим всю необходимую информацию, чтобы убедиться, что вы "
-"действительно наслаждаться своим отдыхом."
+"действительно наслаждаетесь своим отдыхом."
 
 #: ../code/application/views/hw/booking_view.php:18
 #: ../code/application/views/hb/booking_view.php:13
@@ -4900,7 +4900,7 @@ msgstr "Поиск"
 #: ../code/application/views/helpfile/pofields.php:694
 #, php-format
 msgid "Want to receive or send a PDF copy of this quote?"
-msgstr "Хотите получить или отправить PDF копию этой цитаты?"
+msgstr "Хотите получить или отправить эту информацию в формате PDF?"
 
 #: ../code/application/views/hw/hostel_view.php:745
 #: ../code/application/views/hw/reviews.php:6
@@ -8832,8 +8832,8 @@ msgid ""
 "By creating an account you will be able to save properties as favorites, get "
 "access to your bookings and ratings, and many more benefits."
 msgstr ""
-"Создав учетную запись, вы сможете сохранить свойства в качестве избранных, "
-"получить доступ к вашему заказу и рейтингу, и многие другие преимущества."
+"Создав учетную запись, вы сможете сохранить отели в качестве избранных, "
+"получить доступ к вашему заказу и рейтингу, и многое другое."
 
 #: ../code/application/views/helpfile/pofields.php~:820
 #: ../code/application/views/helpfile/pofields.php:820
