po-ita-july-3-v2

--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-30 19:39+0300\n"
-"PO-Revision-Date: 2013-07-03 12:35-0800\n"
+"PO-Revision-Date: 2013-07-03 16:25-0800\n"
 "Last-Translator: Mc web <info@mcwebmanagement.com>\n"
 "Language-Team: English\n"
 "Language: \n"
@@ -2589,7 +2589,7 @@ msgstr "Prezzo medio a persona per notte"
 #: ../code/application/views/helpfile/pofields.php:711
 #, php-format
 msgid "1 guest in 1 Bedroom."
-msgstr "7 ospiti in una Camera."
+msgstr "1 ospite in una Camera."
 
 #: ../code/application/views/property_rooms_avail.php:480
 #, php-format
