--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-30 19:39+0300\n"
-"PO-Revision-Date: 2013-07-03 16:25-0800\n"
+"PO-Revision-Date: 2013-07-05 13:21-0800\n"
 "Last-Translator: Mc web <info@mcwebmanagement.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +19,7 @@ msgstr ""
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-Bookmarks: -1,299,-1,-1,-1,-1,-1,-1,-1,-1\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.5.5\n"
 "X-Poedit-SearchPath-0: C:\\Users\\Louis-Michel\\workspace_pweb\\auberges\\trunk\\system\\application\n"
 "X-Poedit-SearchPath-1: F:\\5 - Eclipse Workspace\\AubergeSVN\\auberges\\trunk\\system\\application\n"
 "X-Poedit-SearchPath-2: F:\\5 - Auberges SVN\\auberges\\trunk\\system\\application\n"
@@ -2578,7 +2577,7 @@ msgstr "Prezzo per camera"
 #: ../code/application/views/helpfile/pofields.php:720
 #, php-format
 msgid "Average per night per room"
-msgstr "Prezzo medio a persona per notte"
+msgstr "Prezzo medio per camera per notte"
 
 #: ../code/application/views/property_rooms_avail.php:478
 #: ../code/application/views/hw/booking_avail_view.php:595
@@ -2594,12 +2593,12 @@ msgstr "1 ospite in una Camera."
 #: ../code/application/views/property_rooms_avail.php:480
 #, php-format
 msgid "1 guest in %d Bedrooms (%d guests in each room)."
-msgstr "1 ospiti in %d Camere (%d ospiti in ogni camera)."
+msgstr "1 ospiti in %d Camere (%d ospiti per camera)."
 
 #: ../code/application/views/property_rooms_avail.php:480
 #, php-format
 msgid "1 guest in %d Bedrooms (%d guest in each room)."
-msgstr "1 ospiti in %d Camere (%d ospiti in ogni camera)."
+msgstr "1 ospiti in %d Camere (%d ospite per camera)."
 
 #: ../code/application/views/property_rooms_avail.php:482
 #: ../code/application/views/hw/booking_avail_view.php:597
@@ -2623,14 +2622,14 @@ msgstr "%d ospiti in una Camera."
 #: ../code/application/views/helpfile/pofields.php:713
 #, php-format
 msgid "%d guests in %d Bedrooms (%d guests in each room)."
-msgstr "%d ospiti in %d Camere (%d ospiti in ogni camera)."
+msgstr "%d ospiti in %d Camere (%d ospiti per camera)."
 
 #: ../code/application/views/property_rooms_avail.php:484
 #: ../code/application/views/hw/booking_avail_view.php:599
 #: ../code/application/views/hb/booking_avail_view.php:636
 #, php-format
 msgid "%d guests in %d Bedrooms (%d guest in each room)."
-msgstr "%d ospiti in %d Camere (%d ospiti in ogni camera)."
+msgstr "%d ospiti in %d Camere (%d ospite per camera)."
 
 #: ../code/application/views/property_rooms_avail.php:518
 #: ../code/application/views/hw/booking_avail_view.php:565
@@ -2973,7 +2972,7 @@ msgstr "Filtra per zona"
 
 #: ../code/application/views/city_view.php:21
 msgid "Filter by Landmarks (within 2km)"
-msgstr "Seleziona per Punti d'interesse (entro 2km)"
+msgstr "Filtra per Punti d'interesse (entro 2km)"
 
 #: ../code/application/views/city_view.php:88
 #: ../code/application/views/helpfile/pofields.php~:845
@@ -2991,7 +2990,7 @@ msgstr "Filtra per zona"
 
 #: ../code/application/views/city_view.php:118
 msgid "Filter by Landmarks"
-msgstr "Seleziona per Punti d'interesse "
+msgstr "Filtra per Punti d'interesse "
 
 #: ../code/application/views/city_view.php:148
 #: ../code/application/views/city_view.php:354
@@ -4022,7 +4021,7 @@ msgstr "Userete %d dormitori per intero."
 #: ../code/application/views/hb/booking_avail_view.php:643
 #, php-format
 msgid "%d %s ( %s )"
-msgstr ""
+msgstr "%d %s ( %s )"
 
 #: ../code/application/views/hw/booking_avail_view.php:358
 #: ../code/application/views/hb/booking_avail_view.php:344
@@ -4059,7 +4058,7 @@ msgstr "Camere che voi occuperete: "
 #: ../code/application/views/hw/booking_avail_view.php:597
 #, php-format
 msgid "%d guests in %d Bedroom (1 guest in each room)."
-msgstr "%d ospiti in %d Camere (1 ospite in ogni camera)."
+msgstr "%d ospiti in %d Camere (1 ospite per camera)."
 
 #: ../code/application/views/hw/booking_avail_view.php:607
 #: ../code/application/views/hb/booking_avail_view.php:594
@@ -4073,7 +4072,7 @@ msgstr "Il prezzo più basso per persona per notte in una camera privata in ques
 #: ../code/application/views/hb/booking_avail_view.php:583
 #, php-format
 msgid "%d guests in %d Bedrooms (1 guest in each room)."
-msgstr "%d ospiti in %d Camere (1 ospite in ogni camera)."
+msgstr "%d ospiti in %d Camere (1 ospite per camera)."
 
 #: ../code/application/views/hw/booking_avail_view.php:707
 #: ../code/application/views/hb/booking_avail_error_view.php:14
@@ -4195,7 +4194,7 @@ msgstr "Cerca per ulteriori strutture in %s"
 #: ../code/application/views/helpfile/pofields.php:730
 #, php-format
 msgid "Your unique booking number will be provided right after your reservation. Your reservation will be immediate and guaranteed."
-msgstr "Il vostro numero unico di prenotazione sarà fornito subito dopo la vostra prenotazione. La vostra prenotazione sarà immediata e garantita."
+msgstr "Il vostro numero di prenotazione vi sarà fornito subito dopo la vostra prenotazione. La vostra prenotazione sarà immediata e garantita."
 
 #: ../code/application/views/hw/booking_avail_view.php:1016
 #: ../code/application/views/hw/booking_avail_view.php:1033
@@ -4384,7 +4383,7 @@ msgstr "Italia (Esempio 393351234567)"
 #: ../code/application/views/helpfile/pofields.php:207
 #, php-format
 msgid "A friend or a family member can lend you his/her credit card for the reservation."
-msgstr "Potete utilizzare la carta di credito di un vostro amico o famigliare oer la prenotazione."
+msgstr "Potete utilizzare la carta di credito di un vostro amico o famigliare per la prenotazione."
 
 #: ../code/application/views/hw/booking_view.php:676
 #: ../code/application/views/hb/booking_view.php:499
@@ -4551,7 +4550,7 @@ msgstr "Volete ricevere o inviare una copia PDF di questo preventivo?"
 #: ../code/application/views/helpfile/pofields.php:890
 #, php-format
 msgid "Click here to see info and prices"
-msgstr "Cliccate qui per vedere i prezzi per questa struttura"
+msgstr "Cliccate qui per vedere i prezzi di questa struttura"
 
 #: ../code/application/views/hw/hostel_view.php:753
 #: ../code/application/views/hb/hostel_view.php:1001
@@ -4572,7 +4571,7 @@ msgstr "Camera"
 #: ../code/application/views/hb/booking_end_view.php:36
 #: ../code/application/views/hb/booking_view.php:111
 msgid "Nb. Personnes"
-msgstr "Numero di persone"
+msgstr "Numero di ospiti"
 
 #: ../code/application/views/hb/booking_end_view.php:77
 #: ../code/application/views/helpfile/pofields.php~:825
@@ -4603,7 +4602,7 @@ msgstr "Informazioni aggiuntive"
 #: ../code/application/views/hb/booking_view.php:96
 #, php-format
 msgid "You only pay the deposit (10%% of total amount) to confirm and secure your reservation now. The remaining amount (90%%) is payable upon arrival. You will find the hotel's contact information (email, address, telephone number…) in your confirmation email after you have made your reservation."
-msgstr "Al fine di confermare la vostra prenotazione è richiesto un pagamento pari al 10%% dell’importo totale. Il restante importo (90%%) dovrà essere saldato al momento del vostro arrivo presso la struttura. Troverete le informazioni e i contatti relative alla struttura (e-mail, indirizzo, numero di telefono ...), nella email di conferma che  riceverete dopo aver effettuato la prenotazione. "
+msgstr "Al fine di confermare la vostra prenotazione è richiesto un pagamento pari al 10%% dell’importo totale. Il restante importo (90%%) dovrà essere saldato al momento del vostro arrivo presso la struttura. Troverete le informazioni e i contatti relative alla struttura (e-mail, indirizzo, numero di telefono …), nella email di conferma che  riceverete dopo aver effettuato la prenotazione. "
 
 #: ../code/application/views/hb/booking_view.php:337
 #: ../code/application/controllers/cadmin.php:26
@@ -7902,7 +7901,7 @@ msgstr "Prezzo per %d notti per persona"
 #: ../code/application/views/helpfile/pofields.php:715
 #, php-format
 msgid "%d guests in %d Bedrooms ( 1 guest in each room)."
-msgstr "%d ospiti in %d Camere (1 ospite in ogni camera)."
+msgstr "%d ospiti in %d Camere (1 ospite per camera)."
 
 #: ../code/application/views/helpfile/pofields.php~:737
 #: ../code/application/views/helpfile/pofields.php:737
@@ -8308,7 +8307,7 @@ msgstr "Nessuna struttura è stata salvata."
 #: ../code/application/views/restricted/user_view.php:6
 #, php-format
 msgid "Mon Compte - Réservation Auberges De Jeunesse"
-msgstr "Il mio conto"
+msgstr "Il mio account"
 
 #: ../code/application/views/helpfile/pofields.php~:866
 #: ../code/application/views/helpfile/pofields.php:866
@@ -8440,13 +8439,13 @@ msgstr "Potete filtrare i risultati secondo la loro vicinanza a specifici luoghi
 #: ../code/application/views/helpfile/pofields.php:887
 #, php-format
 msgid "Click here to view pricing for this property"
-msgstr "Cliccate qui per vedere i prezzi per questa struttura"
+msgstr "Cliccate qui per vedere i prezzi di questa struttura"
 
 #: ../code/application/views/helpfile/pofields.php~:889
 #: ../code/application/views/helpfile/pofields.php:889
 #, php-format
 msgid "The benefits"
-msgstr ""
+msgstr "I vantaggi"
 
 #: ../code/application/views/helpfile/pofields.php~:891
 #: ../code/application/views/helpfile/pofields.php:891
@@ -8455,12 +8454,12 @@ msgid "Save this property as favorite"
 msgstr "Salva questa struttura come preferita"
 
 #: ../code/application/views/helpfile/pofields.php:892
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by Landmarks, train stations, airports..."
-msgstr "Seleziona per Punti d'interesse (entro 2km)"
+msgstr "Filtra per Punti d'interesse, stazioni, aeroporti…"
 
 #: ../code/application/views/helpfile/pofields.php:893
-#, fuzzy, php-format
+#, php-format
 msgid "Expand the map"
 msgstr "Espandi la mappa"
 
@@ -8556,7 +8555,7 @@ msgstr "Qual'è il vostro budget?"
 
 #: ../code/application/views/restricted/user_group_quote.php:130
 msgid "Are the dates and number of people confirmed or will they change?"
-msgstr "Le date e il numero di persone sono confermate o potranno subire dei cambiamenti?"
+msgstr "Le date e il numero di ospiti sono confermate o potranno subire dei cambiamenti?"
 
 #: ../code/application/views/restricted/user_group_quote.php:137
 #, php-format
@@ -8740,7 +8739,7 @@ msgstr "(Convalidato %s)"
 
 #: ../code/application/views/email/new_transaction_hb.php:131
 msgid "Nb. Personne"
-msgstr "Numero di persone"
+msgstr "Numero di ospiti"
 
 #: ../code/application/views/email/new_transaction_hb.php:267
 #: ../code/application/views/email/new_transaction.php:548
