--- a/languages/wp/it_IT_ho.po
+++ b/languages/wp/it_IT_ho.po
@@ -795,7 +795,7 @@ msgstr "Spiacente nessun risultato con i tuoi criteri."
 #: search_box.php:48
 #: search_box.php:87
 msgid "Enter a city name or hostel name"
-msgstr "Inserisci il nome della struttura o per città"
+msgstr "Nome della struttura o della città"
 
 #: search_box.php:57
 #: search_box.php:62
