--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -9295,7 +9295,7 @@ msgstr "Les notes ne peuvent pas dépasser %d caractères"
 #: ../code/application/libraries/Hb_engine.php:584
 #, php-format
 msgid "Hostels in %s - %s"
-msgstr "Auberges de jeunesse - %s - %s"
+msgstr "Auberges de jeunesse - %s - %s®"
 
 #: ../code/application/libraries/Hw_engine.php:217
 #: ../code/application/libraries/Hb_engine.php:257
