po-french-july-17

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -2667,14 +2667,14 @@ msgstr "Chambres"
 #: ../code/application/views/helpfile/pofields.php:499
 #, php-format
 msgid "%s – Hostels in the %s district. Maps for %s, Photos and Reviews for each Hostel in %s."
-msgstr "%s - Youth hostel dans le quartier de %s. Cartes pour %s, photos et commentaires pour chaque youth hostel à %s. "
+msgstr "%s - Auberges de jeunesse dans le quartier de %s. Cartes pour %s, photos et commentaires pour chaque auberge de jeunesse à %s. "
 
 #: ../code/application/views/city_lp.php:14
 #: ../code/application/views/helpfile/pofields.php~:481
 #: ../code/application/views/helpfile/pofields.php:481
 #, php-format
 msgid "Hostels in the %s district"
-msgstr "Youth hostel dans le quartier de %s"
+msgstr "Auberges de jeunesse dans le quartier de %s"
 
 #: ../code/application/views/city_lp.php:17
 #: ../code/application/views/helpfile/pofields.php~:500
@@ -2758,21 +2758,21 @@ msgstr "%s - Auberges de jeunesse près de %s. Cartes pour %s, photos et comment
 #: ../code/application/views/helpfile/pofields.php:475
 #, php-format
 msgid "Hostels close to %s"
-msgstr "Youth Hostels proches de %s"
+msgstr "Auberges de jeunesse proches de %s"
 
 #: ../code/application/views/city_lp.php:52
 #: ../code/application/views/helpfile/pofields.php~:494
 #: ../code/application/views/helpfile/pofields.php:494
 #, php-format
 msgid "%s – Hotels close to %s. Maps for %s, Photos and Reviews for each Hotel in %s."
-msgstr "%s - Youth Hostels près de %s. Cartes pour %s, photos et commentaires pour chaque Youth hostel à %s. "
+msgstr "%s - Hôtels près de %s. Cartes pour %s, photos et commentaires pour chaque Hôtel à %s. "
 
 #: ../code/application/views/city_lp.php:53
 #: ../code/application/views/helpfile/pofields.php~:476
 #: ../code/application/views/helpfile/pofields.php:476
 #, php-format
 msgid "Hotels close to %s"
-msgstr "Youth Hostels proches de %s"
+msgstr "Hôtels proches de %s"
 
 #: ../code/application/views/city_lp.php:56
 #: ../code/application/views/helpfile/pofields.php~:495
@@ -2835,14 +2835,14 @@ msgstr "Auberges de Jeunesse près de %s"
 #: ../code/application/views/helpfile/pofields.php:487
 #, php-format
 msgid "%s – Hostels in %s. Maps for %s, Photos and Reviews for each Hostel in %s."
-msgstr "%s - Youth hostels à %s. Cartes pour %s, photos et commentaires pour chaque Youth Hostel à %s. "
+msgstr "%s - Auberges de jeunesse à %s. Cartes pour %s, photos et commentaires pour chaque auberge de jeunesse à %s. "
 
 #: ../code/application/views/city_lp.php:76
 #: ../code/application/views/helpfile/pofields.php~:469
 #: ../code/application/views/helpfile/pofields.php:469
 #, php-format
 msgid "Hostels in %s"
-msgstr "Youth Hostels à %s"
+msgstr "Auberges de jeunesse à %s"
 
 #: ../code/application/views/city_lp.php:79
 #: ../code/application/views/helpfile/pofields.php~:488
