--- a/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang_he.po
+++ b/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang_he.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-25 22:07+0300\n"
-"PO-Revision-Date: 2013-07-08 13:20-0800\n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"PO-Revision-Date: 2013-07-28 22:13+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9117,7 +9116,7 @@ msgstr "Mein Konto"
 #: ../code/application/views/helpfile/pofields.php:899
 #, php-format
 msgid "Please read carefully"
-msgstr "Bitte sorgfältig lesen"
+msgstr "Bitte sorgfältig durchlesen"
 
 #: ../code/application/views/helpfile/pofields.php~:867
 #: ../code/application/views/helpfile/pofields.php~:900
@@ -9133,7 +9132,7 @@ msgstr "Ich stimme zu"
 #: ../code/application/views/helpfile/pofields.php:901
 #, php-format
 msgid "I do not agree and I will select another property"
-msgstr "Ich stimme nicht zu und wähle ein anderes Objekt aus"
+msgstr "Ich stimme nicht zu und wähle eine andere Unterkunft aus."
 
 #: ../code/application/views/helpfile/pofields.php~:869
 #: ../code/application/views/helpfile/pofields.php:869
@@ -9291,43 +9290,43 @@ msgstr "Diese Unterkunft als Favorit speichern"
 #: ../code/application/views/helpfile/pofields.php:892
 #, php-format
 msgid "Filter by Landmarks, train stations, airports..."
-msgstr "Sortieren nach Wahrzeichen, Bahnhöfen, Flughäfen..."
+msgstr "Nach Sehenswürdigkeiten, Bahnhöfen, Flughäfen... filtern"
 
 #: ../code/application/views/helpfile/pofields.php~:893
 #: ../code/application/views/helpfile/pofields.php:893
 #, php-format
 msgid "Expand the map"
-msgstr "Karte vergrößern"
+msgstr "Die Karte ausweiten"
 
 #: ../code/application/views/helpfile/pofields.php~:894
 #: ../code/application/views/helpfile/pofields.php:894
-#, fuzzy, php-format
+#, php-format
 msgid "Select to compare"
-msgstr "Karte wählen"
+msgstr "Auswahl zum Vergleich"
 
 #: ../code/application/views/helpfile/pofields.php~:895
 #: ../code/application/views/helpfile/pofields.php:895
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to compare"
-msgstr "Bitte hier klicken, um zu vergleichen"
+msgstr "Klick hier zum Vergleich."
 
 #: ../code/application/views/helpfile/pofields.php~:896
 #: ../code/application/views/helpfile/pofields.php:896
-#, fuzzy, php-format
+#, php-format
 msgid "Change dates and currency"
-msgstr "Datum ändern "
+msgstr "Ändere Datum und Währung"
 
 #: ../code/application/views/helpfile/pofields.php~:897
 #: ../code/application/views/helpfile/pofields.php:897
-#, fuzzy, php-format
+#, php-format
 msgid "Click to expand map"
-msgstr "Vergrößern"
+msgstr "Klick hier um die Karte zu vergrößern."
 
 #: ../code/application/views/helpfile/pofields.php~:898
 #: ../code/application/views/helpfile/pofields.php:898
 #, php-format
 msgid "Travel-Insurance"
-msgstr ""
+msgstr "Auslandsreiseversicherung"
 
 #: ../code/application/views/review_empty.php:2
 #: ../code/application/views/review_empty-map.php:7
