--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang_ho.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-25 22:07+0300\n"
-"PO-Revision-Date: 2013-07-05 13:21-0800\n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"PO-Revision-Date: 2013-07-28 22:46+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +19,7 @@ msgstr ""
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-Bookmarks: -1,299,-1,-1,-1,-1,-1,-1,-1,-1\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: C:\\Users\\Louis-Michel\\workspace_pweb\\auberges"
 "\\trunk\\system\\application\n"
 "X-Poedit-SearchPath-1: F:\\5 - Eclipse Workspace\\AubergeSVN\\auberges\\trunk"
@@ -5002,7 +5001,7 @@ msgstr "Volete ricevere o inviare una copia PDF di questo preventivo?"
 #: ../code/application/views/helpfile/pofields.php:890
 #, php-format
 msgid "Click here to see info and prices"
-msgstr "Cliccate qui per vedere i prezzi di questa struttura"
+msgstr "Cliccare qui per ulteriori informazioni e prezzi"
 
 #: ../code/application/views/hw/hostel_view.php:763
 #: ../code/application/views/hb/hostel_view.php:1034
@@ -9136,7 +9135,7 @@ msgstr "Accetto"
 #: ../code/application/views/helpfile/pofields.php:901
 #, php-format
 msgid "I do not agree and I will select another property"
-msgstr "Non accetto e selezionerò un'altra struttura"
+msgstr "Non accetto, voglio selezionare un'altra proprietà"
 
 #: ../code/application/views/helpfile/pofields.php~:869
 #: ../code/application/views/helpfile/pofields.php:869
@@ -9295,43 +9294,44 @@ msgstr "Salva questa struttura come preferita"
 #: ../code/application/views/helpfile/pofields.php:892
 #, php-format
 msgid "Filter by Landmarks, train stations, airports..."
-msgstr "Filtra per Punti d'interesse, stazioni, aeroporti…"
+msgstr ""
+"Filtra secondo punti di riferimento, stazioni ferroviarie, aeroporti..."
 
 #: ../code/application/views/helpfile/pofields.php~:893
 #: ../code/application/views/helpfile/pofields.php:893
 #, php-format
 msgid "Expand the map"
-msgstr "Espandi la Mappa"
+msgstr "Espandi la mappa"
 
 #: ../code/application/views/helpfile/pofields.php~:894
 #: ../code/application/views/helpfile/pofields.php:894
-#, fuzzy, php-format
+#, php-format
 msgid "Select to compare"
-msgstr "Seleziona la Carta"
+msgstr "Selezionare per confrontare"
 
 #: ../code/application/views/helpfile/pofields.php~:895
 #: ../code/application/views/helpfile/pofields.php:895
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to compare"
-msgstr "Per favore cliccate qui per confrontare"
+msgstr "Cliccare qui per confrontare"
 
 #: ../code/application/views/helpfile/pofields.php~:896
 #: ../code/application/views/helpfile/pofields.php:896
-#, fuzzy, php-format
+#, php-format
 msgid "Change dates and currency"
-msgstr "Cambia le date"
+msgstr "Cambia date e valuta"
 
 #: ../code/application/views/helpfile/pofields.php~:897
 #: ../code/application/views/helpfile/pofields.php:897
-#, fuzzy, php-format
+#, php-format
 msgid "Click to expand map"
-msgstr "Clicca per ingrandire"
+msgstr "Cliccare qui per allargare la mappa"
 
 #: ../code/application/views/helpfile/pofields.php~:898
 #: ../code/application/views/helpfile/pofields.php:898
 #, php-format
 msgid "Travel-Insurance"
-msgstr ""
+msgstr "Assicurazione di viaggio"
 
 #: ../code/application/views/review_empty.php:2
 #: ../code/application/views/review_empty-map.php:7
